# labs-1

./: 2.1.cpp  4.1  4.2.cpp  5.1.cpp  9.cpp  CMakeLists.txt  practice2.cpp  practice3.cpp  practice6.cpp  practice7.cpp
2 laboratory/: 2.1.cpp  2.2.cpp
4 laboratory/: 4.2.cpp  4.3.cpp
5 laboratory/: 5.1.cpp  5.2.cpp
6 laboratory/: 6.cpp  CMakeLists.txt  fufu.h
6 laboratory/src/: fufu.cpp
9 laboratory/: 9.cpp  CMakeLists.txt
